<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloContribuyente"
                android:textSize="15dp"
                android:layout_marginTop="@dimen/layoutMargin"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/layoutMargin"
                >



                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediContri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintDeEmpresa"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediRif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintDeRif"
                        />

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloContribuyenteReceptor"
                android:layout_marginTop="@dimen/layoutMargin"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/layoutMargin"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >


                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ediNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hintDelNombre"
                            />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/layoutMargin"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ediCedula"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cedulaCliente"
                            />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintApellido"
                        />

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloProducto"
                android:layout_marginTop="@dimen/layoutMargin"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/layoutMargin">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edicodigoProducto"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintDelCodigoProducto"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintDelProducto"
                        />
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/layoutMargin"
                >

                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediCantidad"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidad"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediPrecio"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintPrecio"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btAgregar"
                    android:layout_marginTop="@dimen/layoutMargin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textBoton"
                    android:onClick="btAgregar"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btTotal"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textBoton2"
                android:onClick="btTotal"
                android:enabled="false"
                />
        </LinearLayout>


    </ScrollView>

</LinearLayout>